--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -19,5 +19,6 @@
 
     <item
         android:id="@+id/profileFragment"
+        android:icon="@drawable/ic_person"
         android:title="Profile" />
 </menu>
