--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="lightBlue">#70b5eb</color>
     <color name="textRed">#bc0000</color>
     <color name="grey_bk">#2e2e2e</color>
+    <color name="grey">#DAD9D9</color>
     <color name="lightGreen">#5fcda4</color>
     <color name="lightYellow">#eac772</color>
     <color name="lightRed">#ea7288</color>
