--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -144,7 +144,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView41" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button"
+            android:id="@+id/addToCart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -155,7 +155,7 @@
             app:layout_constraintStart_toStartOf="@+id/textView42" />
 
         <TextView
-            android:id="@+id/button2"
+            android:id="@+id/increaseQuantity"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:background="@drawable/shape_btn_background"
@@ -170,8 +170,8 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/button"
-            app:layout_constraintStart_toStartOf="@+id/button"
-            app:layout_constraintTop_toTopOf="@+id/button" />
+            app:layout_constraintBottom_toBottomOf="@+id/addToCart"
+            app:layout_constraintStart_toStartOf="@+id/addToCart"
+            app:layout_constraintTop_toTopOf="@+id/addToCart" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
