--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -182,6 +182,17 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/goToCart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
+            app:layout_constraintEnd_toStartOf="@+id/imageView9"
+            app:layout_constraintTop_toTopOf="@+id/imageView9"
+            app:srcCompat="@drawable/ic_shopping_cart"
+            app:tint="@color/black" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
