--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -119,7 +119,7 @@
                 android:background="@color/black" />
 
             <TextView
-                android:id="@+id/textView34"
+                android:id="@+id/complaints"
                 style="@style/settingText"
                 android:layout_marginTop="8dp"
                 android:text="Complaints and suggestions"
