--- a/app/src/main/res/layout/list_item_workout.xml
+++ b/app/src/main/res/layout/list_item_workout.xml
@@ -42,5 +42,15 @@
             app:layout_constraintEnd_toEndOf="@+id/workoutImage"
             app:layout_constraintStart_toStartOf="@+id/workoutImage"
             app:layout_constraintTop_toBottomOf="@+id/workoutImage" />
+
+        <ImageView
+            android:id="@+id/imageView19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/textView33"
+            app:layout_constraintEnd_toEndOf="@+id/workoutImage"
+            app:layout_constraintStart_toStartOf="@+id/workoutImage"
+            app:layout_constraintTop_toTopOf="@+id/workoutImage"
+            app:srcCompat="@drawable/play" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
