--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -173,5 +173,25 @@
             app:layout_constraintBottom_toBottomOf="@+id/addToCart"
             app:layout_constraintStart_toStartOf="@+id/addToCart"
             app:layout_constraintTop_toTopOf="@+id/addToCart" />
+
+        <TextView
+            android:id="@+id/decreaseQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="@drawable/shape_btn_background"
+            android:backgroundTint="@color/white"
+            android:elevation="5dp"
+            android:gravity="center"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
+            android:text="QUN\n1"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/addToCart"
+            app:layout_constraintEnd_toEndOf="@+id/addToCart"
+            app:layout_constraintTop_toTopOf="@+id/addToCart" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
