--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -163,7 +163,7 @@
                 app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/questionText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -179,6 +179,14 @@
                 app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                 app:layout_constraintEnd_toEndOf="@+id/imageView13"
                 app:layout_constraintStart_toStartOf="@+id/imageView13" />
+
+            <Button
+                android:id="@+id/sendQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:text="Send"
+                android:backgroundTint="@color/grey_bk"/>
 
         </LinearLayout>
 
