--- a/app/src/main/res/layout/include_timer_layout.xml
+++ b/app/src/main/res/layout/include_timer_layout.xml
@@ -95,7 +95,7 @@
             app:layout_constraintGuide_percent="0.45" />
 
         <TextView
-            android:id="@+id/textView25"
+            android:id="@+id/bestScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
